fix: wrap text in cards and practice

--- a/src/n2-features/f3-learn/l1-practice/Practice.module.scss
+++ b/src/n2-features/f3-learn/l1-practice/Practice.module.scss
@@ -96,7 +96,13 @@
   &__text {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     min-height: calc(100% - 60px);
+    > div {
+      padding: 20px;
+      text-align: left;
+      white-space: pre-wrap;
+    }
   }
 }
